modbus homma melkeen valmis

--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,6 @@
 \usepackage{subcaption}
 
 % Mathematics packages
-
 \usepackage{amsmath, amssymb, amsthm}
 %\usepackage{bm}
 
@@ -143,11 +142,11 @@
 \tableofcontents
 
 \listoffigures
-%\listoftables
+\listoftables
 %\lstlistoflistings
 
 
-%\glossary
+\glossary
 
 \mainmatter
 % \chapter*{Huomioita}
@@ -170,7 +169,7 @@
 \label{ch:jarjestelmat_sahkon_tuottajina}
 \input{tex/jarjestelmat_sahkon_tuottajina.tex}
 
-\chapter{Rajapinnat -- eri abstractiotasot}
+\chapter{Rajapinnat -- eri abstraktiotasot}
 \label{ch:rajapinat}
 \input{tex/rajapinnat.tex}
 
