--- a/tex/alkusanat.tex
+++ b/tex/alkusanat.tex
@@ -1,3 +1,5 @@
-Toteutan tämän työn yhteistyössä Niko Kangasniemen kanssa. Tässä vaiheessa kuitenkin kirjoitamme työtä molemmat tahoillamme, ja näimme parhaaksi palauttaa kielentarkastukseen vain omat osuutemme. Työmme eivät myöskään ole vielä kovin pitkällä, kuten huomata saattaa.
+Toteutan tämän työn yhteistyössä Niko Kangasniemen kanssa. Tähän palautukseen lähetän yhteisen raakileemme, josta löytyy molempien kirjoittamia osuuksia, eikä kaikkea ole vielä sovitettu yhteen. Omassa osuudessani on tietysti edelleen paljon puutteita, muuanmuassa lähteiden merkinnät puuttuvat ja teksti on raakaa. En myöskään ole ehtinyt korjaamaan tähän dokumenttiin jo keväällä esiinnousseita virheitä, pahoittelut siitä. Minun tekemiäni kappaleita ovat lämpöpumput sähkön käyttäjinä ja sovellukset -kappaleet.
+
+Työ jatkuu.
 
 Ilmari Marttila
