--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -164,3 +164,10 @@ urldate={2020-08-06},
 note={\href{https://www.se.com/us/en/product-range-presentation/576-modbus-plus}{\underline{Modbus Plus}},
       \href{https://www.se.com/ca/en/faqs/FA198221/}{\underline{differenses to Modbus}}}
 }
+
+@techreport{modbusTCPIPTLSSpec,
+institution = {Modbus Organization},
+title={MODBUS/TCP Security-v21 2018-07-24},
+url={https://modbus.org/specs.php},
+type = {Standard}
+}
