--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -47,3 +47,8 @@
   name={ADU},
   description={application data unit, tunnetaan myös nimellä APDU, eli Application Protocol Data Unit}
 }
+
+\newglossaryentry{VPN}{
+  name={VPN},
+  description={virtual private network}
+}
