SG-Ready paiskittu kasaan

--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -171,3 +171,10 @@ title={MODBUS/TCP Security-v21 2018-07-24},
 url={https://modbus.org/specs.php},
 type = {Standard}
 }
+
+@techreport{SGReadyReg,
+institution = {Bundesverband Wärmepumpe e.V.},
+title={Regularien Vergabe SG-Ready V 2.0},
+url={https://www.waermepumpe.de/sg-ready/},
+type = {Standard}
+}
