--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -52,3 +52,8 @@
   name={VPN},
   description={virtual private network}
 }
+
+\newglossaryentry{SG}{
+  name={SG},
+  description={Smart grid -- älykäs sähköverkko}
+}
