Moved parencites from word to text

--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@
 %%%%% Citation information.
 
 \addbibresource{tex/ilmari_references.bib}
-% \addbibresource{tex/niko_references.bib}
+\addbibresource{tex/niko_references.bib}
 
 \hypersetup{hidelinks}
 
