--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -50,7 +50,7 @@ pages = "11187,11202",
 publisher = "MDPI",
 title = "Controllable Load Management Approaches in Smart Grids",
 volume = "8",
-year = "2015-10",
+date = "2015-10",
 }
 
 @INPROCEEDINGS{fischerTriebelSelinger,
@@ -65,7 +65,7 @@ abstract={This paper introduces a control concept for aggregators to directly co
 keywords={heat pumps;optimal control;power markets;smart meters;smart power grids;heat pump pool;smart grid ready interface;residential heat pumps;optimal control model;direct control signal;control parameters;PID controller;load-shifting strategies;day-ahead market;power consumption;Load modeling;Heat pumps;Optimal control;Resistance heating;Switches;Smart meters;Buildings;Heat pumps;Thermal storage;Pooling;Aggregator;Direct controls;Optimal control;SG- Ready},
 doi={10.1109/ISGTEurope.2018.8571870},
 ISSN={null},
-month={Oct},}
+month={10},}
 
 @incollection{sousaPortugal,
 author = "de Sousa, M. and Portugal, P.",
