--- a/tex/johdanto_niko.tex
+++ b/tex/johdanto_niko.tex
@@ -1,10 +1,10 @@
-Vuonna 1882 New Yorkissa käynnistettiin Pearl Street Stationin voimalaitos, joka käyn-nistyessään tuotti sähköä 85 asiakkaalle, ja vuoden päästä käynnistymisestä sillä oli jo 513 asiakasta (1). Tämä voimalaitos loi pohjan keskitetylle energiantuotannolle ja säh-köverkkojen kehitykselle. 
+Vuonna 1882 New Yorkissa käynnistettiin Pearl Street Stationin voimalaitos, joka käynnistyessään tuotti sähköä 85 asiakkaalle, ja vuoden päästä käynnistymisestä sillä oli jo 513 asiakasta \parencite{pearlStreetStation}. Tämä voimalaitos loi pohjan keskitetylle energiantuotannolle ja säh-köverkkojen kehitykselle. 
 
-Nykyiset sähköverkot ovat pääosin suunniteltu keskitetyn energiantuotannon tarpeisiin, mutta uusiutuvien energialähteiden osuus kasvaa yhteiskunnassa jatkuvasti ja hajautu-neen energiantuotannon lisääntyessä älykkään verkon merkitys kasvaa. Vuodesta 2008 lähtien julkaisujen, joiden abstraktissa, otsikossa tai avainsanoissa mainitaan ”Smart Grid”, määrä on kasvanut huomattavasti Science Direct -julkaisualustalla.
+Nykyiset sähköverkot ovat pääosin suunniteltu keskitetyn energiantuotannon tarpeisiin, mutta uusiutuvien energialähteiden osuus kasvaa yhteiskunnassa jatkuvasti ja hajautu-neen energiantuotannon lisääntyessä älykkään verkon merkitys kasvaa. Vuodesta 2008 lähtien julkaisujen, joiden abstraktissa, otsikossa tai avainsanoissa mainitaan ”Smart Grid”, määrä on kasvanut huomattavasti Science Direct -julkaisualustalla. \parencite{Tuballa&Abundo}
 
-Electric Power Research Institute (EPRI) määrittelee älykkään sähköverkon siten, että se sisällyttää tieto- ja kommunikaatioteknologiaa sähköntuotannon, -jakelun ja -kulutuksen eri osa-alueisiin. Sen tavoitteena on minimoida ympäristövaikutuksia, paran-taa luotettavuutta ja palvelua, vahvistaa markkinoita sekä vähentää kustannuksia ja pa-rantaa tehokkuutta. 
+Electric Power Research Institute (EPRI) määrittelee älykkään sähköverkon siten, että se sisällyttää tieto- ja kommunikaatioteknologiaa sähköntuotannon, -jakelun ja -kulutuksen eri osa-alueisiin. Sen tavoitteena on minimoida ympäristövaikutuksia, parantaa luotettavuutta ja palvelua, vahvistaa markkinoita sekä vähentää kustannuksia ja parantaa tehokkuutta. \parencite{SGdefinition}
 
-Nykyiset älykkäät aurinkosähköinvertterit toimivat osana älykästä sähköverkkoa hyö-dyntäen esimerkiksi SunSpec Alliancen avointa standardia. Tämä standardi mahdollis-taa eri valmistajien tuotteiden käytön samassa kohteessa, kun tiedonvaihto on standar-doitua ja siten toimii yhdessä muiden, samaa standardia käyttävien tuotteiden kanssa. Suurista valmistajista esimerkiksi SMA, Yaskawa ja ABB ovat mukana SunSpec Allian-cessa, ja standardi on käytössä laajalla tehoskaalalla laitteita, kuluttajapuolen muuta-mien kilowattien ratkaisuista kaupallisiin, kymmenien kilowattien inverttereihin.
+Nykyiset älykkäät aurinkosähköinvertterit toimivat osana älykästä sähköverkkoa hyödyntäen esimerkiksi SunSpec Alliancen avointa standardia. Tämä standardi mahdollistaa eri valmistajien tuotteiden käytön samassa kohteessa, kun tiedonvaihto on standardoitua ja siten toimii yhdessä muiden, samaa standardia käyttävien tuotteiden kanssa. Suurista valmistajista esimerkiksi SMA, Yaskawa ja ABB ovat mukana SunSpec Alliancessa, ja standardi on käytössä laajalla tehoskaalalla laitteita, kuluttajapuolen muutamien kilowattien ratkaisuista kaupallisiin, kymmenien kilowattien inverttereihin. \parencite{SunSpecProds}
 
 Tässä työssä tarkastellaan aurinkosähköjärjestelmän komponentteja yleisellä tasolla jär-jestelmän ymmärtämiseksi ja perehdytään järjestelmän kommunikaatiorajapintoihin. Sen lisäksi tarkastellaan rajapintojen hyödyntämismahdollisuuksia eri sidosryhmien nä-kökulmasta. Sidosryhmien osalta työssä käsitellään Suomessa sijaitsevien järjestelmien kannalta relevantteja sidosryhmiä. Työssä ei ole tarkoitus käydä läpi sähköverkon ulko-puolella olevia ”off-grid” -järjestelmiä.
 
