--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -1,19 +1,27 @@
 Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituksiin soveltuvista rajapinnoista. Osa sidosryhmistä on kiinnostunut vain datan lukemiseen tarkoitetusta ra-japinnasta käyttäen sitä esimerkiksi käyttövarmuuden ja tuoton tilastointiin, kun taas osa on kiinnostunut järjestelmän etähallinnasta esimerkiksi verkon joustavuuden paranta-miseksi.
 
 \section{Kantaverkkoyhtiö Fingrid}
-  Suomen kantaverkkoyhtiönä Fingrid asettaa vaatimuksia siihen liittyen, mitä rajapintoja järjestelmien on sisällettävä. Se vaatii alle 1MW järjestelmien (voimalaitosten) sisältä-mään logiikkaportin, jonka kautta saapuvalla käskyllä voimalaitoksen on lopetettava pätötehon tuotanto viiden sekunnin kuluessa. Yli 1MW:n suuruiset järjestelmät tulee taas varustaa väyläliitännällä, jolla voidaan alentaa tuotannon pätötehoa annetun ohjearvon mukaisesti. Tämän liitännän on oltava yhteensopiva IEC60870-6, IEC60870-5 tai IEC61850 -protokollan kanssa. 
+  Suomen kantaverkkoyhtiönä Fingrid asettaa vaatimuksia siihen liittyen, mitä rajapintoja järjestelmien on sisällettävä. Se vaatii alle 1MW järjestelmien (voimalaitosten) sisältä-mään logiikkaportin, jonka kautta saapuvalla käskyllä voimalaitoksen on lopetettava pätötehon tuotanto viiden sekunnin kuluessa. Yli 1MW:n suuruiset järjestelmät tulee taas varustaa väyläliitännällä, jolla voidaan alentaa tuotannon pätötehoa annetun ohjearvon mukaisesti. Tämän liitännän on oltava yhteensopiva IEC60870-6, IEC60870-5 tai IEC61850 -protokollan kanssa.
   Yli 10MW:n järjestelmien kohdalla Fingridin Kantaverkkokeskus voi tarvittaessa pyytää järjestelmän käytöstä vastaavaa toimijaa muuttamaan pätö- tai loistehosäädön asettelu-arvoja voimalaitosteknologian asettamissa rajoissa (10). Fingrid ei täten ota kantaa sii-hen, miten tämä säätäminen tapahtuu. Fingridin tarpeet järjestelmien rajapinnoista rajoit-tuvat siten erityistilanteissa järjestelmän alasajoon tai sen tehonsäätöön käytöstä vas-taavan toimijan kautta.
 
-\section{Verkko-operaattori}
+\section{Verkonhaltija}
   \begin{itemize}
     \item kysyntäjouston toteuttaminen
     \item häiriötilanteissa järjestelmän hallinta
   \end{itemize}
+
+  Yksi lämpöpumppujen rajapintoja hyödyntävistä sidosryhmistä voi olla verkonhaltija eli Suomessa käytännössä sähköverkkoyhtiö. Lämpöpumput ovat todennäköisesti verkkoliityntänsä suurimpia kuormia, jonka takia niiden käyttämän sähkön hintaan kohdistuu paineita. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköntoimittajan ohjattavissa. Ohjaussopimuksesta vuoksi kuluttajan saama siirto-/energiahinnanalennus koskee ainoastaan lämpöpumpun käyttämää sähköä. Tämä tarkoittaa, että älykäs energiamittari, jonka kautta myös lämpöpumpun ohjaaminen tapahtuu, mittaa erikseen lämpöpumpun käyttämän energian.
+
 \section{Järjestelmän omistaja}
   \begin{itemize}
     \item monitorointi
     \item muiden järjestelmien integraatio
   \end{itemize}
+
+  Järjestelmän omistajan eli usein käyttäjän suorittama lämpöpumpun monitorointi voidaan toteuttaa eri tavoilla. Hieman edistyneempi käyttäjä saattaa rakentaa lämpöpumppunsa tarjoamiin rajapintoihin liittyvää kotiautomaatioa ja monitorointia. Usein kuitenkin monitorointi ja ohjaus tapahtuu laitevalmistajan tarjoaman mobiili- tai verkkosovelluksen avulla. Sovellukset toteutetaan todennäköisesti pilvipalveluna.
+
+  Integroimalla lämpöpumppu ja aurinkosähköinvertteri taloautomaatioon saavutetaan hyötyjä. Automaation avulla lämpöpumpun käyntijaksojen aiheuttamia tehopiikkejä voidaan kompensoida aurinkosähköinvertterin avulla ja näin vähentää sähkö siirron kustannuksia ja parantaa jännitteen laatua heikoissa sähköerkoissa.
+
 \section{Järjestelmätoimittaja}
   \begin{itemize}
     \item Luotettavuuden tarkastelu
@@ -21,3 +29,9 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
     \item uusien ratkaisujen kehittäminen
     \item huoltopalveluiden tarjoaminen monitorointia hyödyntämällä
   \end{itemize}
+
+  Lämpöpumpujärjestelmän toimittaja voi hyödyntää lämpöpumpun rajapintoja huoltopalveluiden tarjontaan ja dianostiikkaan. Seuraamalla pumpun toimintaa toimittaja voi ennustaa ja tilata tarvittavia huoltoja tai korjauksia, jolloin järjestelmän käyttövarmuus paranee. Toimintatapa tuo lisäarvoa ja säästöjä. Esimerkiksi kuluttajan ei tarvitse käyttää aikaa vikojen selvittämiseen tai huoltojen tilaamiseen. Vastaavasti toimittajan/huoltoyrityksen turhat vierailut vähenevät, kun järjestelmän virhetulanteita voidaan selvittää ja nollata etänä. Toimittajan suorittamaa diagnostiikkaa voidaan käyttää myös tuotekehityksen apuna tai luotaessa parempia ennustemalleja sähkön kulutuksesta.
+
+  \section{Aggregaattori}
+
+    Vanhastaan sähkömarkkoinoilla on ollut käytännössä kolme toimijaa: Energian myyjä, siirtäjä ja ostaja. Aggregaattori näistä kaikista (mahdollisesti) erillinen toimja, jonka tehtävänä on myydä/toimittaa markkinoille joustoa. Aggregaattori voi ohjata esimerkiksi lämpöpumppupoolia ja käydä kauppaa sen mahdollistamalla kysyntäjoustolla. Avoimia kysymyksiä: Kuka omistaa energian? Ḿikä laki tämän mahdollistaa ja milloin? Voiko myös verkonhaltija toimia aggregaattorina?
