--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -57,3 +57,8 @@
   name={SG},
   description={Smart grid -- älykäs sähköverkko}
 }
+
+\newglossaryentry{RTU}{
+  name={RTU},
+  description={remote terminal unit}
+}
