--- a/main.tex
+++ b/main.tex
@@ -188,12 +188,12 @@
 \printbibliography[heading=bibintoc]
 
 
-%\begin{appendices}
+\begin{appendices}
 
-%\chapter{Esimerkkiliite}
-%\label{ch:liite}
-%\input{./tex/liite.tex}
+\chapter{Modbus funktiokoodit}
+\label{ch:liite}
+\input{./tex/modbus_funktio_koodit.tex}
 
-%\end{appendices}
+\end{appendices}
 
 \end{document}
