Added SunSpec Modbus and IEC 61850

--- a/tex/johdanto_niko.tex
+++ b/tex/johdanto_niko.tex
@@ -4,7 +4,7 @@ Nykyiset sähköverkot ovat pääosin suunniteltu keskitetyn energiantuotannon t
 
 Electric Power Research Institute (EPRI) määrittelee älykkään sähköverkon siten, että se sisällyttää tieto- ja kommunikaatioteknologiaa sähköntuotannon, -jakelun ja -kulutuksen eri osa-alueisiin. Sen tavoitteena on minimoida ympäristövaikutuksia, parantaa luotettavuutta ja palvelua, vahvistaa markkinoita sekä vähentää kustannuksia ja parantaa tehokkuutta. \parencite{SGdefinition}
 
-Nykyiset älykkäät aurinkosähköinvertterit toimivat osana älykästä sähköverkkoa hyödyntäen esimerkiksi SunSpec Alliancen avointa standardia. Tämä standardi mahdollistaa eri valmistajien tuotteiden käytön samassa kohteessa, kun tiedonvaihto on standardoitua ja siten toimii yhdessä muiden, samaa standardia käyttävien tuotteiden kanssa. Suurista valmistajista esimerkiksi SMA, Yaskawa ja ABB ovat mukana SunSpec Alliancessa, ja standardi on käytössä laajalla tehoskaalalla laitteita, kuluttajapuolen muutamien kilowattien ratkaisuista kaupallisiin, kymmenien kilowattien inverttereihin. \parencite{SunSpecProds}
+Nykyiset älykkäät aurinkosähköinvertterit toimivat osana älykästä sähköverkkoa hyödyntäen esimerkiksi SunSpec Alliancen avointa standardia. Tämä standardi mahdollistaa eri valmistajien tuotteiden käytön samassa kohteessa, kun tiedonvaihto on standardoitua ja siten toimii yhdessä muiden, samaa standardia käyttävien tuotteiden kanssa. Suurista valmistajista esimerkiksi SMA, Yaskawa ja ABB ovat mukana SunSpec Alliancessa, ja standardi on käytössä laajalla tehoskaalalla laitteita, kuluttajapuolen muutamien kilowattien ratkaisuista kaupallisiin, kymmenien kilowattien inverttereihin. \parencite{SSProds}
 
 Tässä työssä tarkastellaan aurinkosähköjärjestelmän komponentteja yleisellä tasolla jär-jestelmän ymmärtämiseksi ja perehdytään järjestelmän kommunikaatiorajapintoihin. Sen lisäksi tarkastellaan rajapintojen hyödyntämismahdollisuuksia eri sidosryhmien nä-kökulmasta. Sidosryhmien osalta työssä käsitellään Suomessa sijaitsevien järjestelmien kannalta relevantteja sidosryhmiä. Työssä ei ole tarkoitus käydä läpi sähköverkon ulko-puolella olevia ”off-grid” -järjestelmiä.
 
