--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -82,10 +82,28 @@
 	abstract={BackgroundPopulation and Energy DemandEnergy UnitsCurrent World Energy Use PatternsExponential GrowthHubbert's Gaussian ModelNet Energy, Btu Economics, and the Test for SustainabilityDirect Conversion of Sunlight to Electricity with PhotovoltaicsThe SunThe Solar SpectrumThe Effect of Atmosphere on SunlightSunlight SpecificsCapturing SunlightIntroduction to PV SystemsThe PV CellThe PV ModuleThe PV ArrayEnergy StoragePV System LoadsPV System AvailabilityAssociated System Electronic ComponentsGeneratorsBalance of System (BOS) ComponentsGrid-Connected Utility-Interactive PV SystemsApplicable Codes},
 	isbn={1-315-21839-9}
 }
-@misc{SunSpecProds,
+@misc{SSProds,
 	title={SUNSPEC MODBUS CERTIFIED PRODUCTS},
 	url={https://sunspec.org/sunspec-modbus-certified-products/},
   urldate={2020-03-24}
+}
+@misc{SSFactSheet,
+  author       = {SunSpec Alliance},
+  title        = {SunSpec Modbus Interface fact sheet},
+  url          = {http://sunspec.org/wp-content/uploads/2019/09/SunSpec-Modbus-FactSheet-RevA-2019-07-web.pdf},
+  urldate      = {2020-08-13}
+}
+@misc{SSESModels,
+  author       = {SunSpec Alliance},
+  title        = {SunSpec Energy Storage Models - SunSpec Alliance Interoperability Specification},
+  url          = {http://sunspec.org/wp-content/uploads/2019/08/SunSpec-Alliance-Specification-Energy-Storage-ModelsD4rev0.pdf},
+  urldate      = {2020-08-13}
+}
+@misc{SSTech,
+  author       = {SunSpec Alliance},
+  title        = {SunSpec	Technology	Overview - Spec	Alliance	Interoperability	Specification},
+  url          = {http://sunspec.org/wp-content/uploads/2019/09/SunSpec-Techonology-Overview-12040.pdf},
+  urldate      = {2020-08-13}
 }
 @article{Tuballa&Abundo,
   title = {A review of the development of Smart Grid technologies},
